<resources>
    <string name="no_internet_dialog_title">Проблемы с интернетом =(</string>
    <string name="no_internet_dialog_message">Отсутствует подключение к интернету. Проверьте соединение и повторите попытку.</string>
    <string name="ok_dialog_button_text">Повторить</string>
    <string name="service_unavailable_dialog_title">Что-то пошло не так…</string>
    <string name="service_unavailable_dialog_message">Сервер не отвечает, повторите попытку или зайдите позже</string>
    <string name="repeat_dialog_button_text">Повторить</string>
    <string name="cancel_dialog_button_text">отмена</string>

    <string name="no_internet_title">К сожалению, достучаться до\u00A0сервера не\u00A0удалось</string>
    <string name="no_internet_sorry">Приносим свои извинения</string>
    <string name="no_internet_recommendation">Повторите попытку подключения или воспользуйтесь приложением позже</string>
    <string name="no_internet_retry_button_text">Повторить подключение</string>
    <string name="no_internet_takeaway_info_button">О Takeaway</string>
    <string name="no_internet_offline_title">оффлайн доступ</string>
</resources>